--- a/docs/system/02_アーキテクチャ.md
+++ b/docs/system/02_アーキテクチャ.md
@@ -23,6 +23,11 @@
 
 ```
 ┌────────────────────────────────────────────────────────┐
+│             Presentation Layer (Dashboard)              │
+│  Streamlit App (Evaluation, Simulation, Analysis, ROI) │
+└───────────────────────┬────────────────────────────────┘
+                        │
+┌───────────────────────┴────────────────────────────────┐
 │                Application Layer (CLI Scripts)          │
 │  run_scraping.py, run_parsing.py, generate_features.py │
 └───────────────────────┬────────────────────────────────┘
@@ -121,6 +126,9 @@ KeibaAI_v2/
 │   │   ├── models/             # モデル訓練スクリプト
 │   │   ├── optimizer/          # 最適化スクリプト
 │   │   ├── sim/                # シミュレーションスクリプト
+│   │   ├── dashboard/          # Streamlitダッシュボード
+│   │   │   ├── pages/          # 各分析ページ
+│   │   │   └── app.py          # エントリーポイント
 │   │   └── utils/              # ユーティリティ関数
 │   ├── configs/                # YAML設定ファイル（5個）
 │   ├── data/                   # ローカルデータ（.gitignore）
