--- a/docs/system/03_データモデル.md
+++ b/docs/system/03_データモデル.md
@@ -219,10 +219,11 @@ Generation 5: 32頭
 |---------|---------|---------|
 | **レース特徴** | distance_m, track_surface, weather, track_condition, venue, race_class | int16, string |
 | **馬特徴** | age, sex, avg_finish_last3, avg_finish_last5, win_rate_last10, days_since_last_race | int8, float32 |
-| **騎手特徴** | jockey_win_rate, jockey_place_rate, jockey_roi, jockey_venue_win_rate | float32 |
+| **騎手特徴** | jockey_win_rate, jockey_place_rate, jockey_roi, jockey_venue_win_rate, combo_overperform | float32 |
 | **調教師特徴** | trainer_win_rate, trainer_place_rate, trainer_roi | float32 |
-| **血統特徴** | sire_avg_finish, dam_avg_finish, sire_distance_aptitude | float32 |
-| **派生特徴** | pace_index, position_change_*, popularity_finish_diff, relative_odds | float32 |
+| **血統特徴** | sire_avg_finish, dam_avg_finish, nicks_avg_finish, sire_course_avg_finish | float32 |
+| **派生特徴** | pace_index, position_change_*, popularity_finish_diff, relative_odds, running_style, time_deviation | float32, string |
+| **コース特徴** | bracket_avg_finish, course_suitability | float32 |
 
 **カラム総数**: 約200列
 
