--- a/docs/system/04_スクレイピング詳細.md
+++ b/docs/system/04_スクレイピング詳細.md
@@ -1,6 +1,6 @@
 # 04_スクレイピング詳細
 
-**最終更新日**: 2025-11-18
+**最終更新日**: 2025-11-19
 
 ---
 
@@ -235,6 +235,90 @@ for race_id in tqdm(race_ids):
     time.sleep(random.uniform(2.5, 5.0))
 ```
 
+### 6. キャッシング戦略
+
+#### レースIDキャッシング
+
+```python
+import json
+from pathlib import Path
+
+RACE_ID_CACHE_PATH = Path("keibaai/data/master/race_id_cache.json")
+
+def load_race_id_cache() -> Dict[str, List[str]]:
+    """キャッシュからレースIDを読み込み"""
+    if RACE_ID_CACHE_PATH.exists():
+        with open(RACE_ID_CACHE_PATH, 'r', encoding='utf-8') as f:
+            return json.load(f)
+    return {}
+
+def save_race_id_cache(cache: Dict[str, List[str]]):
+    """レースIDをキャッシュに保存"""
+    RACE_ID_CACHE_PATH.parent.mkdir(parents=True, exist_ok=True)
+    with open(RACE_ID_CACHE_PATH, 'w', encoding='utf-8') as f:
+        json.dump(cache, f, ensure_ascii=False, indent=2)
+
+def scrape_race_id_list(kaisai_date: str) -> List[str]:
+    """レースIDリスト取得（キャッシュ優先）"""
+    cache = load_race_id_cache()
+    
+    # キャッシュヒット
+    if kaisai_date in cache:
+        logger.info(f"Cache hit: {kaisai_date}")
+        return cache[kaisai_date]
+    
+    # キャッシュミス → Seleniumで取得
+    logger.info(f"Cache miss: {kaisai_date}, fetching...")
+    race_ids = _fetch_race_ids_selenium(kaisai_date)
+    
+    # キャッシュに保存
+    cache[kaisai_date] = race_ids
+    save_race_id_cache(cache)
+    
+    return race_ids
+```
+
+**メリット**:
+- 同じ日付の再実行時にSeleniumを起動せず、即座にレースIDを取得
+- 過去データの分析時に大幅な時間短縮
+
+#### カレンダーキャッシング
+
+```python
+CALENDAR_CACHE_PATH = Path("keibaai/data/master/calendar_cache.json")
+
+def scrape_kaisai_date(start_date: str, end_date: str) -> List[str]:
+    """開催日取得（月単位でキャッシュ）"""
+    cache = load_calendar_cache()
+    
+    all_dates = []
+    current = datetime.strptime(start_date, '%Y-%m-%d')
+    end = datetime.strptime(end_date, '%Y-%m-%d')
+    
+    while current <= end:
+        month_key = current.strftime('%Y-%m')
+        
+        # キャッシュチェック（過去月のみ）
+        if month_key in cache and current < datetime.now().replace(day=1):
+            logger.info(f"Using cached calendar: {month_key}")
+            all_dates.extend(cache[month_key])
+        else:
+            # Web取得
+            month_dates = _fetch_calendar_web(current.year, current.month)
+            cache[month_key] = month_dates
+            all_dates.extend(month_dates)
+        
+        current = current.replace(day=1) + timedelta(days=32)
+        current = current.replace(day=1)
+    
+    save_calendar_cache(cache)
+    return all_dates
+```
+
+**メリット**:
+- 過去月のデータは一度取得すれば永続的にキャッシュ利用
+- サーバー負荷の軽減
+
 ---
 
 ## 💻 実装詳細
@@ -248,7 +332,7 @@ def fetch_html_robust_get(
     additional_headers: Optional[Dict[str, str]] = None
 ) -> Optional[bytes]:
     """
-    堅牢なHTML取得
+    堅牢なHTML取得（requestsベース）
 
     Returns:
         HTML content (bytes) or None if failed
@@ -281,6 +365,43 @@ def fetch_html_robust_get(
         logger.error(f"Request failed: {url}, {e}")
         return None
 ```
+
+### 血統ページの取得（requestsベース）
+
+**変更理由**: 以前はSeleniumを使用していましたが、頻繁なタイムアウトとドライバー再起動が発生していたため、`requests`に切り替えました。
+
+```python
+def scrape_html_ped(
+    horse_id_list: List[str],
+    output_dir: Path,
+    session: Optional[requests.Session] = None
+):
+    """血統HTMLの取得（requestsベース）"""
+    
+    if session is None:
+        session = get_robust_session()
+    
+    output_dir.mkdir(parents=True, exist_ok=True)
+    
+    for horse_id in tqdm(horse_id_list, desc="Fetching pedigree"):
+        output_file = output_dir / f"{horse_id}.bin"
+        
+        if output_file.exists():
+            continue
+        
+        url = f"https://db.netkeiba.com/horse/ped/{horse_id}/"
+        html_bytes = fetch_html_robust_get(url, session)
+        
+        if html_bytes:
+            with open(output_file, 'wb') as f:
+                f.write(html_bytes)
+            logger.info(f"Saved: {output_file}")
+```
+
+**効果**:
+- 取得速度が大幅に向上（Seleniumと比較して約3-5倍高速）
+- タイムアウトエラーが激減
+- メモリ使用量の削減
 
 ### レース結果のバッチスクレイピング
 
