--- a/docs/system/07_機械学習モデル.md
+++ b/docs/system/07_機械学習モデル.md
@@ -1,6 +1,6 @@
 # 07_機械学習モデル
 
-**最終更新日**: 2025-11-18
+**最終更新日**: 2025-11-20
 
 ---
 
@@ -78,25 +78,33 @@ where:
 2. **Regression**: 絶対的なタイムを学習（RMSE最小化）
 
 ```python
+import numpy as np
 from lightgbm import LGBMRanker, LGBMRegressor
 
 class MuEstimator:
-    def __init__(self):
-        # Stage 1: Ranking
-        self.ranker = LGBMRanker(
-            objective='lambdarank',
-            metric='ndcg',
-            n_estimators=2000,
-            learning_rate=0.01
-        )
-
-        # Stage 2: Regression
-        self.regressor = LGBMRegressor(
-            objective='regression',
-            metric='rmse',
-            n_estimators=2000,
-            learning_rate=0.01
-        )
+    def __init__(self, ranker_params=None, regressor_params=None):
+        # Stage 1: Ranking（相対的な強さを学習）
+        self.ranker_params = ranker_params or {
+            'objective': 'lambdarank',
+            'metric': 'ndcg',
+            'n_estimators': 1000,
+            'learning_rate': 0.01,
+            'num_leaves': 31,
+            'verbose': -1
+        }
+        
+        # Stage 2: Regression（絶対的なタイムを学習）
+        self.regressor_params = regressor_params or {
+            'objective': 'regression',
+            'metric': 'rmse',
+            'n_estimators': 1000,
+            'learning_rate': 0.01,
+            'num_leaves': 31,
+            'verbose': -1
+        }
+        
+        self.ranker = None
+        self.regressor = None
 
     def fit(self, X, y, group):
         """
@@ -105,26 +113,52 @@ class MuEstimator:
             y: 完走時間（秒） [N]
             group: レースごとの馬数 [num_races]
         """
-        # Stage 1
-        self.ranker.fit(X, y, group=group)
+        # Stage 1: Rankerの学習
+        # yは完走時間（浮動小数点）なので、整数のrelevanceスコアに変換
+        rank_target = []
+        start_idx = 0
+        for g in group:
+            group_y = y[start_idx:start_idx+g]
+            # タイムからランクを計算（0-indexed）
+            ranks = np.argsort(np.argsort(group_y))
+            # relevance: 最大ランク - 現在のランク（1着が最高スコア）
+            relevance = (g - 1) - ranks
+            rank_target.extend(relevance)
+            start_idx += g
+        rank_target = np.array(rank_target, dtype=int)
+        
+        # Rankerの学習
+        self.ranker = LGBMRanker(**self.ranker_params)
+        self.ranker.fit(X, rank_target, group=group)
         rank_scores = self.ranker.predict(X)
 
-        # Stage 2
-        X_with_rank = np.c_[X, rank_scores]  # Rank scoreを特徴量に追加
-        self.regressor.fit(X_with_rank, y)
+        # Stage 2: Regressorの学習
+        X_aug = X.copy()
+        X_aug['rank_score'] = rank_scores  # Rankerのスコアを特徴量に追加
+        
+        self.regressor = LGBMRegressor(**self.regressor_params)
+        self.regressor.fit(X_aug, y)
 
     def predict(self, X):
         rank_scores = self.ranker.predict(X)
-        X_with_rank = np.c_[X, rank_scores]
-        mu = self.regressor.predict(X_with_rank)
+        X_aug = X.copy()
+        X_aug['rank_score'] = rank_scores
+        mu = self.regressor.predict(X_aug)
         return mu
 ```
+
+**重要な実装ポイント**:
+- `LGBMRanker`は整数型のrelevanceスコアを要求するため、完走時間（浮動小数点）から各レース内でランクを計算
+- `(最大ランク - 現在のランク)`で1着が最高スコアになるように変換
+- Rankerのスコアを特徴量に追加することで、相対的な強さと絶対的なタイムの両方を学習
 
 ---
 
 ### σモデル（分散推定）
 
-**ファイル**: `keibaai/src/modules/models/sigma_estimator.py`（未実装）
+**ファイル**: `keibaai/src/modules/models/sigma_estimator.py`（実装済み）
+
+> **Note**: Muモデルの残差から各馬の不確実性を学習するLightGBMモデルを実装済みです。
 
 #### アプローチ
 
@@ -157,7 +191,9 @@ sigma_pred = sigma_model.predict(X_test)
 
 ### νモデル（混沌度推定）
 
-**ファイル**: `keibaai/src/modules/models/nu_estimator.py`（未実装）
+**ファイル**: `keibaai/src/modules/models/nu_estimator.py`（実装済み）
+
+> **Note**: レースレベルの特徴量からMLE推定したνを学習するLightGBMモデルを実装済みです。
 
 #### アプローチ
 
@@ -444,16 +480,161 @@ hit_rate = (predicted_winners == actual_winners).mean()
 
 ---
 
+## 🔧 ハイパーパラメータ最適化（OptunaTuner）
+
+**ファイル**: `keibaai/src/modules/models/optuna_tuner.py`
+
+LightGBMモデルのハイパーパラメータを自動で最適化するためのOptunaベースのチューニングフレームワークです。
+
+### アプローチ
+
+**2つのチューニングモード**:
+1. **Regressorチューニング**: 時系列クロスバリデーション（TimeSeriesSplit）
+2. **Rankerチューニング**: グループ境界を考慮したホールドアウト法
+
+```python
+from keibaai.src.modules.models.optuna_tuner import OptunaTuner
+
+# チューナーの初期化
+tuner = OptunaTuner(n_trials=50, timeout=3600)
+
+# Regressorのチューニング
+best_params_reg = tuner.tune_lgbm_regressor(X, y)
+
+# Rankerのチューニング
+best_params_rank = tuner.tune_lgbm_ranker(X, rank_target, groups)
+```
+
+### 最適化されるハイパーパラメータ
+
+| パラメータ | 探索範囲 | 説明 |
+|-----------|---------|------|
+| `lambda_l1` | 1e-8 ~ 10.0 (log) | L1正則化 |
+| `lambda_l2` | 1e-8 ~ 10.0 (log) | L2正則化 |
+| `num_leaves` | 2 ~ 256 | 葉の最大数 |
+| `feature_fraction` | 0.4 ~ 1.0 | 特徴量サンプリング率 |
+| `bagging_fraction` | 0.4 ~ 1.0 | データサンプリング率 |
+| `bagging_freq` | 1 ~ 7 | バギング頻度 |
+| `min_child_samples` | 5 ~ 100 | 葉ノードの最小サンプル数 |
+| `learning_rate` | 0.001 ~ 0.1 (log) | 学習率 |
+
+### クロスバリデーション戦略
+
+**Regressor**: `TimeSeriesSplit(n_splits=3)`で時系列性を保持
+
+**Ranker**: レース単位のグループを維持するため、最後の20%をホールドアウト
+```python
+# グループ境界で分割（レースを途中で分割しない）
+adjusted_split_idx = group_cumsum[split_group_idx]
+```
+
+---
+
+## 🏆 アンサンブル学習（StackingEnsemble）
+
+**ファイル**: `keibaai/src/modules/models/stacking_ensemble.py`
+
+複数のベースモデルの予測を組み合わせて、より頑健で高精度な予測を実現します。
+
+### アーキテクチャ
+
+```
+Level 0 (Base Models):
+┌──────────┐  ┌──────────┐  ┌──────────┐
+│ Model 1  │  │ Model 2  │  │ Model 3  │
+│(LightGBM)│  │(LightGBM)│  │(LightGBM)│
+└─────┬────┘  └─────┬────┘  └─────┬────┘
+      │             │             │
+      └──────┬──────┴──────┬──────┘
+             │  Out-of-Fold │
+             │  Predictions │
+             ▼             ▼
+      ┌────────────────────────┐
+      │ Level 1 (Meta Model)  │
+      │  Ridge Regression     │
+      └───────────┬────────────┘
+                  │
+                  ▼
+           Final Prediction
+```
+
+### 使用方法
+
+```python
+from keibaai.src.modules.models.stacking_ensemble import StackingEnsemble
+from lightgbm import LGBMRegressor
+
+# ベースモデルの定義（異なる設定）
+base_models = [
+    LGBMRegressor(n_estimators=1000, learning_rate=0.01, num_leaves=31),
+    LGBMRegressor(n_estimators=1500, learning_rate=0.005, num_leaves=63),
+    LGBMRegressor(n_estimators=800, learning_rate=0.02, num_leaves=15)
+]
+
+# アンサンブルモデルの学習
+ensemble = StackingEnsemble(base_models=base_models, n_folds=5)
+ensemble.fit(X_train, y_train)
+
+# 予測
+y_pred = ensemble.predict(X_test)
+```
+
+### アンサンブルの利点
+
+1. **分散の削減**: 複数モデルの平均化により過学習を抑制
+2. **バイアスの補正**: メタモデルが各ベースモデルの弱点を補完
+3. **頑健性の向上**: 単一モデルの失敗リスクを軽減
+
+---
+
+## 📊 統合トレーニングパイプライン
+
+**ファイル**: `keibaai/src/models/train_full_pipeline.py`
+
+Mu, Sigma, Nu の3つのモデルを一括で学習し、ハイパーパラメータ最適化とアンサンブル学習を統合したパイプラインです。
+
+### 実行コマンド
+
+```bash
+# 基本的な学習
+python keibaai/src/models/train_full_pipeline.py
+
+# ハイパーパラメータチューニング有効化
+python keibaai/src/models/train_full_pipeline.py --tune
+
+# アンサンブル学習有効化
+python keibaai/src/models/train_full_pipeline.py --ensemble
+
+# 両方を有効化
+python keibaai/src/models/train_full_pipeline.py --tune --ensemble
+```
+
+### パイプラインの流れ
+
+1. **データ読み込み**: `features.parquet`から特徴量を取得
+2. **Muモデル学習**:
+   - `--tune`が有効な場合、OptunaでRankerとRegressorのパラメータを最適化
+   - `--ensemble`が有効な場合、StackingEnsembleで複数モデルを結合
+3. **Sigmaモデル学習**: Muモデルの残差から各馬の不確実性を学習
+4. **Nuモデル学習**: レース特徴量から混沌度を学習
+5. **モデル保存**: `artifacts/models/`に保存
+
+---
+
 ## 🎓 モデル改善のアイデア
 
-### 1. アンサンブル
+### 1. アンサンブル（実装済み）
+
+> **Note**: `StackingEnsemble`として実装済みです（上記参照）。
 
 ```python
 # 複数モデルの平均
 mu_ensemble = (mu_lgbm + mu_xgboost + mu_catboost) / 3
 ```
 
-### 2. Stacking
+### 2. Stacking（実装済み）
+
+> **Note**: `StackingEnsemble`クラスとして実装済みです（上記参照）。
 
 ```python
 # Level 0: Base models
@@ -468,7 +649,7 @@ meta_model.fit(X_meta, y_true)
 mu_final = meta_model.predict(X_meta_test)
 ```
 
-### 3. ニューラルネットワーク
+### 3. ニューラルネットワーク（Future Enhancement）
 
 ```python
 import tensorflow as tf
