--- a/docs/system/08_シミュレーションと最適化.md
+++ b/docs/system/08_シミュレーションと最適化.md
@@ -1,6 +1,6 @@
 # 08_シミュレーションと最適化
 
-**最終更新日**: 2025-11-18
+**最終更新日**: 2025-11-19
 
 ---
 
@@ -238,210 +238,73 @@ where:
   EV_i = p_i * o_i - 1  # 期待値
 ```
 
-### 実装（PortfolioOptimizer）
+### 2段階投資ロジック (Two-Stage Betting Logic)
 
-**ファイル**: `keibaai/src/modules/optimizer/optimizer.py`
+**目的**: 1日の総予算を効率的に配分しつつ、直前オッズの変化に対応する。
 
-```python
-from scipy.optimize import minimize
+**フェーズ1: 朝一の予算配分 (Morning Allocation)**
+*   **タイミング**: 当日朝（または前日夜）
+*   **入力**: 全レースのシミュレーション結果、朝一オッズ（または確定オッズ）
+*   **ロジック**:
+    *   各レースの「魅力度（スコア）」を計算（例: Kelly基準での期待成長率の総和）。
+    *   1日の総予算（例: 1万円）を、スコアに応じて比例配分する。
+    *   期待値が低いレースには予算を割り当てない（0円）。
+*   **担当**: `DailyAllocator`
 
-class PortfolioOptimizer:
-    def __init__(self, kelly_fraction=0.25, ev_threshold=0.05):
-        """
-        Args:
-            kelly_fraction: Kelly基準の縮小率
-            ev_threshold: 賭けを検討する最小期待値
-        """
-        self.kelly_fraction = kelly_fraction
-        self.ev_threshold = ev_threshold
-
-    def optimize_kelly(
-        self,
-        win_probs: np.ndarray,
-        odds: np.ndarray,
-        capital: float
-    ) -> np.ndarray:
-        """
-        Fractional Kelly Criterionによる最適化
-
-        Args:
-            win_probs: 各馬の勝率 [N]
-            odds: 各馬のオッズ [N]
-            capital: 総資本
-
-        Returns:
-            optimal_bets: 最適な賭け金配分 [N]
-        """
-        N = len(win_probs)
-
-        # 期待値フィルタ
-        ev = win_probs * odds - 1
-        valid_mask = ev > self.ev_threshold
-
-        if not valid_mask.any():
-            # 賭ける価値のある馬がいない
-            return np.zeros(N)
-
-        # 目的関数（負にして最小化問題に変換）
-        def objective(f):
-            # Kelly utility function
-            utility = np.sum(
-                f * np.log(1 + (odds - 1) * f / capital + 1e-10)
-            )
-            return -utility
-
-        # 制約条件
-        constraints = [
-            # 総賭け金 ≤ 資本
-            {'type': 'ineq', 'fun': lambda f: capital - np.sum(f)},
-        ]
-
-        # 境界条件（非負制約）
-        bounds = [(0, capital) if valid_mask[i] else (0, 0) for i in range(N)]
-
-        # 初期値（EVが正の馬に均等配分）
-        num_valid = valid_mask.sum()
-        initial_guess = np.where(
-            valid_mask,
-            capital * 0.05,  # 5%ずつ
-            0
-        )
-
-        # 最適化実行
-        result = minimize(
-            objective,
-            initial_guess,
-            method='SLSQP',
-            bounds=bounds,
-            constraints=constraints
-        )
-
-        if not result.success:
-            logging.warning(f"Optimization failed: {result.message}")
-            return np.zeros(N)
-
-        # Kelly fractionでリスク調整
-        optimal_bets = result.x * self.kelly_fraction
-
-        return optimal_bets
-```
-
-### 最適化結果の例
-
-```json
-{
-  "race_id": "202310010811",
-  "capital": 100000,
-  "kelly_fraction": 0.25,
-  "ev_threshold": 0.05,
-  "recommended_bets": [
-    {
-      "horse_number": 5,
-      "horse_name": "サンプルホース5",
-      "win_prob": 0.352,
-      "odds": 3.2,
-      "expected_value": 0.126,
-      "bet_amount": 8500,
-      "expected_return": 9576
-    },
-    {
-      "horse_number": 11,
-      "horse_name": "サンプルホース11",
-      "win_prob": 0.118,
-      "odds": 9.8,
-      "expected_value": 0.156,
-      "bet_amount": 3200,
-      "expected_return": 3699
-    }
-  ],
-  "total_bet": 11700,
-  "expected_portfolio_return": 13275,
-  "expected_roi": 1.135
-}
-```
+**フェーズ2: レース直前の投資実行 (Just-Before-Race Execution)**
+*   **タイミング**: 各レース発走直前（例: 5分前）
+*   **入力**: そのレースのシミュレーション結果、**直前オッズ**、配分されたレース予算
+*   **ロジック**:
+    *   配分された予算内で、Fractional Kelly Criterionを用いて最適な買い目を決定。
+    *   直前オッズで期待値が閾値を下回った場合は、投資を見送る（スキップ）。
+*   **担当**: `PortfolioOptimizer`
 
 ---
 
 ## 💻 実装詳細
 
-### 日次シミュレーションスクリプト
+### 日次予算配分クラス
 
-**ファイル**: `keibaai/src/sim/simulate_daily_races.py`
+**ファイル**: `keibaai/src/optimizer/daily_allocator.py`
 
 ```python
-import argparse
-from pathlib import Path
-import pandas as pd
-from modules.sim.simulator import RaceSimulator
-
-def main():
-    parser = argparse.ArgumentParser()
-    parser.add_argument('--date', required=True, help='YYYY-MM-DD')
-    parser.add_argument('--K', type=int, default=1000)
-    args = parser.parse_args()
-
-    # 予測結果読み込み
-    predictions_path = Path(f"data/predictions/parquet/{args.date}_predictions.parquet")
-    df = pd.read_parquet(predictions_path)
-
-    # レースごとにシミュレーション
-    simulator = RaceSimulator(K=args.K)
-
-    for race_id in df['race_id'].unique():
-        race_df = df[df['race_id'] == race_id]
-
-        mu = race_df['mu_pred'].values
-        sigma = race_df['sigma_pred'].values
-        nu = race_df['nu_pred'].iloc[0]
-
-        # シミュレーション実行
-        result = simulator.simulate(mu, sigma, nu)
-
-        # 保存
-        output_path = Path(f"data/simulations/{race_id}.json")
-        save_simulation_result(race_id, result, output_path)
-
-if __name__ == '__main__':
-    main()
+class DailyAllocator:
+    def allocate_budget(self, daily_simulations, daily_odds, total_daily_budget):
+        """
+        1. 各レースのスコア（期待成長率）を計算
+        2. スコアが正のレースに予算を比例配分
+        """
+        ...
 ```
 
-### 日次最適化スクリプト
+### 日次最適化スクリプト (統合版)
 
 **ファイル**: `keibaai/src/optimizer/optimize_daily_races.py`
 
 ```python
-import argparse
-from pathlib import Path
-from modules.optimizer.optimizer import PortfolioOptimizer
-
 def main():
-    parser = argparse.ArgumentParser()
-    parser.add_argument('--date', required=True)
-    parser.add_argument('--W_0', type=float, default=100000)
-    args = parser.parse_args()
+    # 1. 全データのロード
+    simulations = load_simulation_data(...)
+    daily_odds = load_odds_data(...) # 朝一オッズ
 
-    # シミュレーション結果読み込み
-    sim_dir = Path(f"data/simulations/")
+    # 2. 予算配分 (Phase 1)
+    allocator = DailyAllocator(config)
+    race_budgets = allocator.allocate_budget(simulations, daily_odds, args.W_0)
 
-    # JRAオッズ取得（Selenium）
-    from modules.preparing import scrape_jra_odds
-    odds_data = scrape_jra_odds(args.date)
-
-    # 最適化
-    optimizer = PortfolioOptimizer(kelly_fraction=0.25)
-
-    for race_id, sim_result in load_simulations(sim_dir, args.date):
-        win_probs = sim_result['win_probs']
-        odds = odds_data[race_id]['win_odds']
-
-        # 最適化実行
-        optimal_bets = optimizer.optimize_kelly(win_probs, odds, args.W_0)
-
-        # 保存
-        save_order(race_id, optimal_bets, f"data/orders/{race_id}_order.json")
-
-if __name__ == '__main__':
-    main()
+    # 3. レースごとの実行 (Phase 2)
+    optimizer = PortfolioOptimizer(config)
+    
+    for sim in simulations:
+        race_id = sim['race_id']
+        budget = race_budgets.get(race_id, 0)
+        
+        if budget > 0:
+            # 直前オッズを取得（本番ではここで再取得）
+            current_odds = get_latest_odds(race_id)
+            
+            # 最適化実行
+            result = optimizer.optimize(sim, current_odds, W_0=budget)
+            save_order(result)
 ```
 
 ---
